--- a/index.html
+++ b/index.html
@@ -18,29 +18,31 @@
     </head>
     <body>
         
-    <h1> Introducciom y objetivos </h1>
-    <h2> En esta seccion, presentmos el tema del tutoril y establecemos los objetivos, como aprender a dibujar las proporciones faciales correctamente</h2>
-    <h3> Proporciones basicas de un rostro </h3>
-    <h4> ¿Cuales son las proporciones clave de un rostro? </h4>
-    <P>  Las proporciones clave incluyen que la distancia entre los ojos es aproximadamente el ancho de un ojo, y la nariz se encuentra en el punto medio entre los ojos y la barbilla </P>
-    <h5> ¿Como dibujar jos realistas?</h5>
-    <p> Los ojos se dividen en tres secciones: parpado superior, pupila e irirs. La forma y tamaño de la pupila varian segun la luz </p>
-    <h6> ¿Como dibujar una nariz con sombreado? </h6>
-    <p> Sombrea ligeramente a lo largo de los lados de a nariz y debajo del puente para crear profundidad</p>
-    <h7> ¿Como dibujar labios naturales? </h7>
-    <p> Los labios tienen pliegues y sombras sutiles. Sombrea ligeramente en las comisuras y debajo del labio inferior.</p>
-    <h8>¿Como lograr un sombreado realista en el rostro? </h8>
-    <p>Utiliza trazos suaves y direccionales pra crear sombras suaves. Las areas iluminda relejan la luz.</p>
-    <h9>¿Como se dibujan las cejas de manera realista</h9>
-    <p> Las cejas sigue la forma del hueso de la frente y varian en grosor. Utiliza trazos suaves y direccionales para dibujarlas.</p>
-    <h10>¿Como lograr un aspecto natural en las fosas nasales? </h10>
-    <P>AGREGAR SOMBRAS SUTILES </P>
-    <h11>¿Como dibujar dientes y lengu en una boca?</h11>
-    <P> SE REPRESENTAN CON LINEAS SUAVES Y PEQUEÑAS SOMBRAS </P>
-    <h12>¿Cual es la Importancia en la direccion de la uz en el sombreado?</h12>
-    <P> MANTENER LA COHERENCIA EN LA DIRECCION PARA UN ASPECTO RELISTA</P>
-    <h13>¿COMO PUEDO MEJORAR MIS HABILIDADES DE SOMBREADO?</h13>
-    <P> PRACTICA SOMBREANDO DFERENTES OBJETOS </P>
+<h1>Introducción: Explorando el Arte del Dibujo Facial</h1>
+<p>Bienvenidos a este emocionante viaje de dibujo facial. En este tutorial, desentrañaremos las proporciones clave del rostro y aprenderemos técnicas esenciales para plasmar ojos expresivos, narices realistas, labios naturales y más. Descubriremos cómo el juego de luces y sombras puede dar vida a tus creaciones, permitiéndote capturar la profundidad y autenticidad de cada detalle. Prepara tus herramientas y tu creatividad, ¡porque te espera un viaje fascinante hacia el arte de retratar rostros con maestría!</p>     
+<hr>
+<h3>¿Cuáles son las proporciones clave de un rostro?</h3>
+<p>Las proporciones clave incluyen que la distancia entre los ojos es aproximadamente el ancho de un ojo, y la nariz se encuentra en el punto medio entre los ojos y la barbilla</p>
+<h3>¿Cómo dibujar ojos realistas? </h3>
+<p>Los ojos se dividen en tres secciones: parpado superior, pupila e iris. La forma y tamaño de la pupila varían según la luz. </p>
+<h3>¿Cómo dibujar una nariz con sombreado? </h3>
+<p>Sombrea ligeramente a lo largo de los lados de la nariz y debajo del puente para crear profundidad. </p>
+<h3>¿Cómo dibujar labios naturales? </h3>
+<p>Los labios tienen pliegues y sombras sutiles. Sombrea ligeramente en las comisuras y debajo del labio inferior. </p>
+<h3>¿Cómo lograr un sombreado realista en el rostro? </h3>
+<p>Utiliza trazos suaves y direccionales para crear sombras suaves. Las áreas iluminadas relejan la luz.</p>
+<h3>¿Cómo lograr un aspecto natural en las fosas nasales? </h3>
+<p>Agregar sombras sutiles en las fosas nasales para darles profundidad sin exagerar, ayudara a dar un aspecto mas natural.</p>
+<h3>¿Cómo se dibujan las cejas de manera realista? </h3>
+<p>Las cejas siguen la forma del hueso de la frente y varían en grosor. Utiliza trazos suaves y direccionales para dibujarlas. </p>
+<h3>¿Cómo dibujar dientes y lengua en una boca? </h3>
+<p>Los dientes se representan con líneas suaves y pequeñas sombras. La lengua se sugiere con una forma simple en la boca. </p>
+<h3>¿Cuál es la Importancia en la dirección de la luz en el sombreado? </h3>
+<p>La dirección de la luz afecta las sombras y resaltos en el rostro. Mantén la coherencia en la dirección para un aspecto realista.</p>
+<h3>¿Cómo puedo mejorar mis habilidades de sombreado?</h3>
+<p>Practica sombreando diferentes objetos y superficies para dominar las técnicas de sombreado.</p>
+<p>En conclusión, hemos desglosado las proporciones clave de un rostro y explorado técnicas para dar vida a los ojos, nariz, labios y otros detalles. El juego de luces y sombras es esencial, ya que la dirección de la luz influye en la profundidad y realismo de tus creaciones. La práctica constante y la atención a los detalles te permitirán avanzar en tus habilidades y capturar la esencia única de cada rostro en tus obras. </p> 
+<p>A medida que sigas dibujando, recuerda que cada trazo es una oportunidad para crecer como artista y refinar tu enfoque creativo. ¡Sigue experimentando y disfrutando del proceso de dar vida a los rostros en tus dibujos!</p>
 
 
     </body>
